# optimism

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  requirements.txt
.claude/skills/branch-review/: SKILL.md
.claude/skills/pr/: SKILL.md
assets/maps/: garden.txt  level_01.txt  level_02.txt  level_03.txt  level_04.txt
assets/sprites/: inquisitor.json
docs/: level_design_guidelines.md  wsl2-setup.md
docs/architecture/: ARCHITECTURE.md
docs/concept/: OPTIMISM.md
examples/: sprite_test.rs  sprite_validate.rs
src/: app_state.rs  components.rs  events.rs  lib.rs  main.rs  resources.rs  tracing_bridge.rs
src/ai/: brute.rs  inquisitor.rs  mod.rs  soldier.rs  thief.rs
src/plugins/: audio.rs  camera.rs  collectibles.rs  combat.rs  enemies.rs  game_over.rs  hud.rs  maze.rs  menu.rs  mod.rs  movement.rs  narration.rs  player.rs  sprites.rs  telemetry.rs
tasks/: 3d-to-sprite-sheet-pipeline.md  avian2d_fixed_update_cost.md  game_implementation_plan.md  poc-r1-micromegas-bevy.md  poc-r2-dependency-compatibility.md  poc-r3-procedural-pixel-art.md  poc-r4-headless-testing.md  poc-r4b-reskin-base-model.md  poc-r5-audio.md  subsystem_tracing_plan.md  wasm_browser_support_plan.md
tasks/completed/: game_context_plan.md  tracing_bridge_plan.md
tests/: dep_compat.rs  level_progression.rs  phase1_app_skeleton.rs  poc_r4_headless_testing.rs  poc_r5_audio.rs  telemetry_integration.rs
tools/: assemble_characters.py  assemble_one.py  generate_audio.py  inspect_assets.py  render_all.py  render_sprites.py
